Bug 15360 - Setting veto files = /.*/ break listing directories
Summary: Setting veto files = /.*/ break listing directories
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.18.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-19 15:54 UTC by Andreas Schneider
Modified: 2023-05-31 16:11 UTC (History)
2 users (show)

See Also:


Attachments
patch for 4.18 (6.00 KB, patch)
2023-04-20 05:57 UTC, Andreas Schneider
jra: review+
Details
patch for 4.17 (6.00 KB, patch)
2023-04-20 05:59 UTC, Andreas Schneider
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2023-04-19 15:54:44 UTC
Setting veto files = /.*/ break listing directories.

Patch will follow.
Comment 1 Samba QA Contact 2023-04-19 22:31:05 UTC
This bug was referenced in samba master:

b5a66840e3057cbff85fe6cd231310c4a9cfb34b
a2acbd3f3cff8d1cac63acdead4b7be14a7092b2
9eb44306623fc4897b373b04763e475f696ab92d
Comment 2 Andreas Schneider 2023-04-20 05:57:50 UTC
Created attachment 17870 [details]
patch for 4.18
Comment 3 Andreas Schneider 2023-04-20 05:59:02 UTC
Created attachment 17871 [details]
patch for 4.17
Comment 4 Jeremy Allison 2023-04-24 17:31:58 UTC
Re-assigning to Jule for inclusion in 4.17.next, 4.18.next.
Comment 5 Jule Anger 2023-04-28 14:16:09 UTC
Pushed to autobuild-v4-{18,17}-test.
Comment 6 Samba QA Contact 2023-04-28 15:18:04 UTC
This bug was referenced in samba v4-18-test:

a26cbb56b5b7be67b261f9646799fb70651ebca3
c09c3f8e38ac2e02676af908b9a0e958ac673d74
49777b08ac26e76d339fd74c39f74c20af433837
Comment 7 Samba QA Contact 2023-04-28 15:58:12 UTC
This bug was referenced in samba v4-17-test:

647c7c75f8f24e1f33047697b55fc79f35dfb134
c13b5b7dc89039cb4ee6a74b766fe944ce311d67
b026bbe24c12dcbfb716c7be26df183d339eac8b
Comment 8 Jule Anger 2023-05-05 11:42:02 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2023-05-11 07:09:44 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.8):

647c7c75f8f24e1f33047697b55fc79f35dfb134
c13b5b7dc89039cb4ee6a74b766fe944ce311d67
b026bbe24c12dcbfb716c7be26df183d339eac8b
Comment 10 Samba QA Contact 2023-05-31 16:11:01 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.3):

a26cbb56b5b7be67b261f9646799fb70651ebca3
c09c3f8e38ac2e02676af908b9a0e958ac673d74
49777b08ac26e76d339fd74c39f74c20af433837